scrollbar correction

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,11 +1,3 @@
-/* .homeIllustration-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-height: 90vh;
-  max-width: 100vw;
-} */
-
 .homeIllustration {
   width: 100%;
   height: 100%;
